--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<style>
+    
+
+    table{
+        width: 400px;
+        border-collapse: collapse;  <!-- Junta os espaços da tabela-->
+
+    }
+
+    td {
+        border: 1px solid black;
+        padding: 8px;
+    }
+</style>
 </head>
 
 <body>
@@ -22,6 +37,24 @@
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
+        </tr>
+
+        <tr> <!--Segunda linha-->
+            <td>A2</td>
+            <td>B2</td>
+            <td>C3</td>
+        </tr>
+
+        <tr>
+            <td>A3</td>
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
+
+        <tr>
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
         </tr>
     </table>
     
