--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -25,9 +25,9 @@
  <!--
     HIERARQUIA DE TABELAS (SIMPLES)
     TABLE= tabela
-        TABLE ROW = linha de tabela
-            TABLE HEADER = cabeçalho de tabela
-            TABLE DATA = dado de tabela
+        TABLE ROW = linha de tabela      TR
+            TABLE HEADER = cabeçalho de tabela     TH
+            TABLE DATA = dado de tabela       TD
  -->
 
     <h1>Primeira tabela</h1>
